filtering section in dashboard orders fixed with proper width, basic style of sidebar and dashboard navbar styled as main webside, with a dark theme and added icon in siodebar for the control of the collapses items by a jquery script and added style to the narrow that will change direction following the direction of the sidebar, also by jquery

--- a/static/scss/buyit/_dashboard.scss
+++ b/static/scss/buyit/_dashboard.scss
@@ -1,7 +1,8 @@
 .filter-orders {
-    width: 50%;
+    width: 100%;
     margin: auto;
     padding: 20px;
+    margin-left: 20px;
 }
 
 .filter-orders-container {
@@ -20,4 +21,17 @@
 
 .icon-inline-space {
     margin-left: 0.5rem;
+}
+
+.dashboard-navbar {
+    height: 62px;
+    color: white;
+}
+
+.bg-dark {
+    color: white !important;
+}
+
+.navbar-icon {
+    color: white;
 }
