--- a/static/scss/buyit/_navbar.scss
+++ b/static/scss/buyit/_navbar.scss
@@ -20,9 +20,3 @@
     }
 }
 
-
-//Sidebar Navbar
-.sidebar-navbar {
-    right: 30px;
-    position: absolute!important;
-}
