--- a/static/scss/buyit/_sidebar.scss
+++ b/static/scss/buyit/_sidebar.scss
@@ -90,3 +90,12 @@
 #wrapper {
     min-height: 100vh;
 }
+
+.sidebar-navbar {
+    right: 30px;
+    position: absolute !important;
+}
+
+#menu{
+    float: right;
+}
